--- a/server/client/src/stylesheets/redLightGreenLight.css
+++ b/server/client/src/stylesheets/redLightGreenLight.css
@@ -44,6 +44,13 @@ p{
     justify-content: center;
     position: relative;
     border: none;
+} #gameBox.whiteBg{
+    color: black;
+} #gameBox.whiteBg #gameMidText{
+    padding: 0 5px;
+    font-weight: 500;
+    font-size: 24px;
+    text-align: center;
 }
 #gameTopText{
     position: absolute;
